crates/pamoja-ffi/include/pamoja.h


typedef enum {
  PamojaStatus_Ok = 0,
  PamojaStatus_Transport = 1,
  PamojaStatus_Io = 2,
  PamojaStatus_Codec = 3,
  PamojaStatus_Closed = 4,
  PamojaStatus_Unsupported = 5,
  PamojaStatus_InvalidArgument = 6,
  PamojaStatus_Other = 7,
  PamojaStatus_Panic = 8,
  PamojaStatus_Auth = 9,
} PamojaStatus;
typedef enum {
  PamojaCoapReliability_NonConfirmable = 0,
  PamojaCoapReliability_Confirmable = 1,
} PamojaCoapReliability;
typedef enum {
  PamojaDelivery_Sent = 0,
  PamojaDelivery_Buffered = 1,
} PamojaDelivery;
typedef enum {
  PamojaQos_AtMostOnce = 0,
  PamojaQos_AtLeastOnce = 1,
  PamojaQos_ExactlyOnce = 2,
} PamojaQos;
typedef struct PamojaBuffer PamojaBuffer;
typedef struct PamojaCoapClient PamojaCoapClient;
typedef struct PamojaEventBus PamojaEventBus;
typedef struct PamojaLadder PamojaLadder;
typedef struct PamojaLoopbackBroker PamojaLoopbackBroker;
typedef struct PamojaLoopbackTransport PamojaLoopbackTransport;
typedef struct PamojaMessage PamojaMessage;
typedef struct PamojaRecordingActuator PamojaRecordingActuator;
typedef struct PamojaReplay PamojaReplay;
typedef struct PamojaSimSensor PamojaSimSensor;
typedef struct PamojaStore PamojaStore;
typedef struct PamojaTransport PamojaTransport;
typedef struct {
  const char *host;
  uint16_t port;
  const char *bind;
  PamojaCoapReliability reliability;
  uint32_t ack_timeout_ms;
  uint32_t max_retransmits;
} PamojaCoapConfig;
typedef struct {
  const char *client_id;
  const char *host;
  uint16_t port;
  uint32_t keep_alive_secs;
  uint32_t capacity;
  PamojaQos qos;
  uint32_t max_packet_size;
} PamojaMqttConfig;
PamojaEventBus *pamoja_event_bus_new(uintptr_t capacity);
PamojaEventBus *pamoja_event_bus_subscribe(const PamojaEventBus *bus);
PamojaStatus pamoja_event_bus_publish(const PamojaEventBus *bus,
                                      const uint8_t *payload,
                                      uintptr_t payload_len);
PamojaStatus pamoja_event_bus_next(const PamojaEventBus *bus, PamojaBuffer **out_event);
void pamoja_event_bus_free(PamojaEventBus *bus);
PamojaCoapClient *pamoja_coap_client_new(const PamojaCoapConfig *config);
PamojaStatus pamoja_coap_client_connect(PamojaCoapClient *client);
PamojaStatus pamoja_coap_client_send(PamojaCoapClient *client,
                                     const char *topic,
                                     const uint8_t *payload,
                                     uintptr_t payload_len);
PamojaStatus pamoja_coap_client_subscribe(PamojaCoapClient *client, const char *topic);
PamojaStatus pamoja_coap_client_recv(PamojaCoapClient *client, PamojaMessage **out_message);
bool pamoja_coap_client_is_connected(PamojaCoapClient *client);
PamojaStatus pamoja_coap_client_disconnect(PamojaCoapClient *client);
void pamoja_coap_client_free(PamojaCoapClient *client);
PamojaTransport *pamoja_transport_coap(const PamojaCoapConfig *config);
PamojaLadder *pamoja_ladder_new(PamojaStore *store);
PamojaStatus pamoja_ladder_rung(PamojaLadder *ladder, PamojaTransport *transport);
PamojaStatus pamoja_ladder_connect(PamojaLadder *ladder);
PamojaStatus pamoja_ladder_send(PamojaLadder *ladder,
                                const char *topic,
                                const uint8_t *payload,
                                uintptr_t payload_len,
                                PamojaDelivery *out_delivery);
PamojaStatus pamoja_ladder_flush(PamojaLadder *ladder, uintptr_t *out_sent);
PamojaStatus pamoja_ladder_buffered(PamojaLadder *ladder, uintptr_t *out_count);
void pamoja_ladder_free(PamojaLadder *ladder);
PamojaLoopbackBroker *pamoja_loopback_broker_new(void);
void pamoja_loopback_broker_free(PamojaLoopbackBroker *broker);
PamojaLoopbackTransport *pamoja_loopback_transport_new(const PamojaLoopbackBroker *broker);
PamojaStatus pamoja_loopback_transport_connect(PamojaLoopbackTransport *transport);
PamojaStatus pamoja_loopback_transport_send(PamojaLoopbackTransport *transport,
                                            const char *topic,
                                            const uint8_t *payload,
                                            uintptr_t payload_len);
PamojaStatus pamoja_loopback_transport_subscribe(PamojaLoopbackTransport *transport,
                                                 const char *topic);
PamojaStatus pamoja_loopback_transport_recv(PamojaLoopbackTransport *transport,
                                            PamojaMessage **out_message);
bool pamoja_loopback_transport_is_connected(PamojaLoopbackTransport *transport);
void pamoja_loopback_transport_disconnect(PamojaLoopbackTransport *transport);
void pamoja_loopback_transport_free(PamojaLoopbackTransport *transport);
PamojaTransport *pamoja_transport_loopback(const PamojaLoopbackBroker *broker);
PamojaSimSensor *pamoja_sim_sensor_new(float baseline,
                                       float drift_per_read,
                                       float noise,
                                       uint32_t seed);
PamojaStatus pamoja_sim_sensor_read(PamojaSimSensor *sensor, float *out_reading);
void pamoja_sim_sensor_free(PamojaSimSensor *sensor);
PamojaReplay *pamoja_replay_new(const float *readings, uintptr_t count, bool repeating);
PamojaStatus pamoja_replay_read(PamojaReplay *replay, float *out_reading);
void pamoja_replay_free(PamojaReplay *replay);
PamojaRecordingActuator *pamoja_recording_actuator_new(void);
PamojaStore *pamoja_store_memory(uintptr_t capacity);
PamojaStore *pamoja_store_file(const char *dir, uintptr_t capacity);
PamojaStatus pamoja_store_append(PamojaStore *store, const uint8_t *record, uintptr_t record_len);
PamojaStatus pamoja_store_peek(PamojaStore *store, PamojaBuffer **out_record);
PamojaStatus pamoja_store_pop(PamojaStore *store, PamojaBuffer **out_record);
PamojaStatus pamoja_store_len(PamojaStore *store, uintptr_t *out_len);
PamojaStatus pamoja_store_drain_to(PamojaStore *store,
                                   PamojaTransport *transport,
                                   const char *topic,
                                   uintptr_t *out_sent);
void pamoja_store_free(PamojaStore *store);
const char *pamoja_message_topic(const PamojaMessage *message);
const uint8_t *pamoja_message_payload(const PamojaMessage *message);
uintptr_t pamoja_message_payload_len(const PamojaMessage *message);
void pamoja_message_free(PamojaMessage *message);
PamojaTransport *pamoja_transport_mqtt(const PamojaMqttConfig *config);
PamojaTransport *pamoja_transport_faulty(PamojaTransport *transport, uintptr_t failures);
PamojaTransport *pamoja_transport_degraded(PamojaTransport *transport,
                                           uint32_t drop_every,
                                           uint32_t up,
                                           uint32_t down);
PamojaStatus pamoja_transport_connect(PamojaTransport *transport);
PamojaStatus pamoja_transport_send(PamojaTransport *transport,
                                   const char *topic,
                                   const uint8_t *payload,
                                   uintptr_t payload_len);
PamojaStatus pamoja_transport_subscribe(PamojaTransport *transport, const char *topic);
void pamoja_transport_free(PamojaTransport *transport);